Source/WebCore/platform/graphics/GraphicsLayer.h
@@ -565,6 +565,8 @@ public:
     virtual bool isGraphicsLayerTextureMapper() const { return false; }
     virtual bool isCoordinatedGraphicsLayer() const { return false; }
 
+    virtual void setScrollPositionChanged() { }
+
     static void traverse(GraphicsLayer&, std::function<void (GraphicsLayer&)>);
 
 protected:
